SERVER-7435 Set symbol path in call to SymInitialize()

Set a symbol search path for Windows stack trace, starting with the
directory where the running executable is located.  Include Windows
directories as well, using default locations.